@@ -5,6 +5,8 @@ Version 3.1-3
  o Fixed bug in Effect.clmm and Effect.clmm2
  
  o Improved stability of handling linear and generalized linear mixed effects models from lme4 and nlme.
+ 
+ o Fixed bug in plot.eff() affecting multiline displays with four or more predictors in the effect.
 
 Version 3.1-2
 
